@@ -473,6 +473,8 @@ typedef enum {
  * everywhere. */
 #define END_STREAM_REASON_FIXME_XXXX 0
 
+/* Reasons why we (or a remote OR) might close a stream. See tor-spec.txt for
+ * documentation of these. */
 #define END_STREAM_REASON_MISC 1
 #define END_STREAM_REASON_RESOLVEFAILED 2
 #define END_STREAM_REASON_CONNECTREFUSED 3
@@ -514,6 +516,8 @@ typedef enum {
 #define END_CIRC_REASON_NOPATH          -2
 #define END_CIRC_AT_ORIGIN              -1
 
+/* Reasons why we (or a remote OR) might close a circuit. See tor-spec.txt for
+ * documentation of these. */
 #define _END_CIRC_REASON_MIN            0
 #define END_CIRC_REASON_NONE            0
 #define END_CIRC_REASON_TORPROTOCOL     1
@@ -2034,7 +2038,6 @@ typedef enum hostname_type_t {
   NORMAL_HOSTNAME, ONION_HOSTNAME, EXIT_HOSTNAME, BAD_HOSTNAME
 } hostname_type_t;
 hostname_type_t parse_extended_hostname(char *address);
-int hostname_is_a_test_address(char *address);
 
 /********************************* connection_or.c ***************************/
 
@@ -2142,7 +2145,6 @@ int control_event_client_status(int severity, const char *format, ...)
   CHECK_PRINTF(2,3);
 int control_event_server_status(int severity, const char *format, ...)
   CHECK_PRINTF(2,3);
-int control_event_teststream(edge_connection_t *conn);
 
 int init_cookie_authentication(int enabled);
 int decode_hashed_password(char *buf, const char *hashed);
